# nativium

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  requirements.txt
.github/workflows/: android.yml  docs.yml  ios.yml  linux.yml  macos.yml  wasm.yml  windows.yml
apps/android/sample/app/: build.gradle
apps/ios/sample/: Makefile
apps/ios/sample/Sample/: Info.plist  Sample-Bridging-Header.h
apps/ios/sample/Sample-AppleWatch Extension/App/: ExtensionDelegate.swift  Info.plist  Sample-AppleWatch-Bridging-Header.h
apps/ios/sample/Sample.xcodeproj/: project.pbxproj
apps/ios/sample/Shared/Models/: SimpleOption.swift
apps/tests/src/app/: core.cpp
apps/wasm/src/: main.cpp
apps/web/sample/: README.md  package.json
apps/web/sample/src/components/: About.vue  Home.vue  ToDo.vue
cmake/: common.cmake  functions.cmake
commands/: clean.py  code.py  conan.py  docs.py  gluecode.py  help.py
common/cmake/: common.cmake  functions.cmake
conan/profiles/: nativium_catalyst_profile  nativium_ios_profile  nativium_macos_profile  nativium_tvos_profile  nativium_wasm_profile  nativium_watchos_profile  nativium_windows_profile
conan/recipe/: conanfile.py
config/: docs.py  gluecode.py  target_ios.py  target_macos.py  target_tests.py  target_windows.py
core/: command.py  const.py  net.py  target.py
docs/default/: mkdocs.yml
docs/default/docs/: about.md  apple.md  code-tools.md  commands.md  distribution.md  documentation.md  glue-code.md  how-to-start.md  index.md  libraries.md  modules.md  platforms.md  projects.md  requirements.md  support.md  targets.md  tests.md  troubleshooting.md
modules/app-core/cmake/: module.cmake
modules/app-core/gluecode/: generate.py
modules/app-core/gluecode/yaml/: application_core.yaml
modules/app-domain/cmake/: module.cmake
modules/app-domain/gluecode/: generate.py
modules/app-domain/gluecode/yaml/: customer.yaml  device_data.yaml  initialization_data.yaml  response.yaml  response_error.yaml  todo.yaml
modules/app-enumerator/cmake/: module.cmake
modules/app-enumerator/gluecode/: generate.py
modules/app-enumerator/gluecode/yaml/: customer_status_enum.yaml
modules/app-helper/cmake/: module.cmake
modules/app-helper/gluecode/: generate.py
modules/app-helper/gluecode/yaml/: customer_helper.yaml  environment_helper.yaml  security_helper.yaml  shared_data_helper.yaml  todo_helper.yaml
modules/app-repository/cmake/: module.cmake
modules/app-repository/gluecode/: generate.py
modules/app-repository/gluecode/yaml/: todo_repository.yaml
modules/app-system-service/cmake/: module.cmake
modules/app-system-service/gluecode/: generate.py
modules/app-system-service/gluecode/yaml/: customer_system_service.yaml  customer_system_service_login_data.yaml
modules/datetime/cmake/: module.cmake
modules/datetime/gluecode/: generate.py
modules/datetime/gluecode/yaml/: date_time.yaml
modules/file-helper/cmake/: module.cmake
modules/file-helper/gluecode/: generate.py
modules/file-helper/gluecode/yaml/: file_helper.yaml  file_helper_platform_service.yaml
modules/http-client/cmake/: module.cmake
modules/http-client/gluecode/: generate.py
modules/http-client/gluecode/yaml/: http_client.yaml  http_client_logger.yaml  http_client_platform_service.yaml  http_header.yaml  http_method.yaml  http_request.yaml  http_request_param.yaml  http_response.yaml
modules/http-server/cmake/: module.cmake
modules/http-server/gluecode/: generate.py
modules/http-server/gluecode/yaml/: http_server.yaml  http_server_config.yaml
modules/json/cmake/: module.cmake
modules/logger/cmake/: module.cmake
modules/logger/gluecode/: generate.py
modules/logger/gluecode/yaml/: logger.yaml  logger_level.yaml  logger_platform_service.yaml
modules/shared-data/cmake/: module.cmake
modules/shared-data/gluecode/: generate.py
modules/shared-data/gluecode/yaml/: shared_data.yaml  shared_data_platform_service.yaml
modules/string-helper/cmake/: module.cmake
modules/string-helper/gluecode/: generate.py
modules/string-helper/gluecode/yaml/: string_helper.yaml
modules/support-lib/cmake/: module.cmake
modules/target-android/cmake/: module.cmake
modules/target-ios/cmake/: module.cmake
modules/target-linux/cmake/: module.cmake
modules/target-macos/cmake/: module.cmake
modules/target-tests/cmake/: module.cmake
modules/target-windows/cmake/: module.cmake
projects/android/Sample/: settings.gradle
projects/ios/Sample/: Podfile
projects/ios/Sample/Sample-AppleWatch/: Info.plist
projects/ios/Sample/Sample.xcodeproj/: project.pbxproj
projects/ios/Sample/Sample/App/: AppDelegate.swift
projects/others/nativium/src/: main.cpp
targets/android/cmake/: CMakeLists.txt  source.cmake  target.cmake
targets/android/conan/recipe/: conanfile.py
targets/android/config/: target.py
targets/android/verbs/: build.py  dist.py  package.py  prepare.py
targets/ios/cmake/: CMakeLists.txt  source.cmake  target.cmake
targets/ios/conan/recipe/: conanfile.py
targets/ios/config/: target.py
targets/ios/support/cocoapods/: ezored.podspec
targets/ios/verbs/: build.py  dist.py  package.py  prepare.py
targets/linux/cmake/: CMakeLists.txt  source.cmake  target.cmake
targets/linux/conan/recipe/: conanfile.py
targets/linux/config/: target.py
targets/linux/verbs/: build.py  dist.py  package.py  prepare.py
targets/macos/cmake/: CMakeLists.txt  target.cmake
targets/macos/conan/recipe/: conanfile.py
targets/macos/verbs/: build.py  dist.py  package.py  prepare.py
targets/tests/cmake/: CMakeLists.txt  source.cmake  target.cmake
targets/tests/conan/recipe/: conanfile.py
targets/tests/verbs/: prepare.py  run.py
targets/wasm/cmake/: source.cmake  target.cmake
targets/wasm/config/: target.py
targets/wasm/support/web/: README.md  index.html
targets/wasm/verbs/: build.py  dist.py  prepare.py
targets/windows/cmake/: CMakeLists.txt  source.cmake  target.cmake
targets/windows/conan/recipe/: conanfile.py
targets/windows/verbs/: build.py  dist.py  package.py  prepare.py
tests/include/fixtures/: InitializationFixture.hpp
(+296 files in other folders)
