# Configurations
cmake_minimum_required(VERSION 3.20.0)
get_filename_component(CMAKE_SOURCE_REALPATH "${CMAKE_SOURCE_DIR}/../../../" REALPATH)

set(NATIVIUM_NAME
    "nativium"
    CACHE STRING "Project Name"
)

set(NATIVIUM_CXX_STANDARD
    "17"
    CACHE STRING "Cpp Standard"
)

set(NATIVIUM_TARGET
    "android"
    CACHE STRING "Target Name"
)

set(NATIVIUM_VERSION
    "1.0.0"
    CACHE STRING "Version"
)

set(NATIVIUM_ARCH
    "armv8"
    CACHE STRING "Architecture"
)

set(NATIVIUM_ROOT_PATH ${CMAKE_SOURCE_REALPATH})

set(NATIVIUM_BUILD_PATH
    ${NATIVIUM_ROOT_PATH}/build/${NATIVIUM_TARGET}/${CMAKE_BUILD_TYPE}/${NATIVIUM_ARCH}
    CACHE INTERNAL ""
)

# Platform configurations
set(NATIVIUM_USE_CXX_HTTP_CLIENT
    NO
    CACHE STRING "CXX Http Client"
)

# Project
project(${NATIVIUM_NAME})

# Conan
include(${NATIVIUM_BUILD_PATH}/conan/conanbuildinfo.cmake)
conan_basic_setup()

# STL
find_package(ndk-stl REQUIRED PATHS ".")

# Common
include(${NATIVIUM_ROOT_PATH}/cmake/common.cmake)

# CXX flags
set(NATIVIUM_CMAKE_CXX_FLAGS
    "${NATIVIUM_CMAKE_CXX_FLAGS} -stdlib=libc++"
    CACHE INTERNAL ""
)

# Flags
set(CMAKE_C_FLAGS
    "${CMAKE_C_FLAGS} ${NATIVIUM_CMAKE_C_FLAGS}"
    CACHE INTERNAL ""
)
set(CMAKE_CXX_FLAGS
    "${CMAKE_CXX_FLAGS} ${NATIVIUM_CMAKE_CXX_FLAGS}"
    CACHE INTERNAL ""
)

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_DEBUG} -O0 -g")
set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_MINSIZEREL} -Os")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -O2 -g")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} -Oz")

# Project
include_directories(${NATIVIUM_HEADER_SEARCH_PATHS})
link_directories(${NATIVIUM_LIBRARY_SEARCH_PATHS})

add_library(${NATIVIUM_NAME} SHARED ${NATIVIUM_SOURCE_FILES_MERGED})

target_link_libraries(${NATIVIUM_NAME} "${NATIVIUM_LIBRARY_LINKS}")
target_link_libraries(${NATIVIUM_NAME} "${NATIVIUM_FRAMEWORK_LINKS}")
target_link_libraries(${NATIVIUM_NAME} "${CONAN_LIBS}")

set_target_properties(
    ${NATIVIUM_NAME}
    PROPERTIES CXX_STANDARD "${NATIVIUM_CXX_STANDARD}"
               CXX_STANDARD_REQUIRED YES
               CXX_EXTENSIONS NO
               CXX_VISIBILITY_PRESET default
               VERSION "${NATIVIUM_VERSION}"
               SOVERSION "${NATIVIUM_VERSION}"
               PUBLIC_HEADER "${NATIVIUM_HEADER_FILES}"
               LINK_FLAGS_RELEASE -s
)

target_compile_options(${NATIVIUM_NAME} PUBLIC "${NATIVIUM_COMPILE_OPTIONS}")

target_compile_definitions(${NATIVIUM_NAME} PRIVATE NATIVIUM_VERSION="${NATIVIUM_VERSION}" HAS_UNCAUGHT_EXCEPTIONS=0)
target_compile_definitions(${NATIVIUM_NAME} PRIVATE EXPERIMENTAL_AUTO_CPP_THREAD_ATTACH)
